--- a/WebLegemClient/src/common/directives/asociar-documento/template/form_crear_doc.html
+++ b/WebLegemClient/src/common/directives/asociar-documento/template/form_crear_doc.html
@@ -1,7 +1,6 @@
 ﻿<label class="ca_label_busqueda">{{vm.language.strings.CompleteDatosCrearDocumento}}:</label>
 
 <wl-buscar-doc crear-doc="true" 
-               atras="vm.atrasBuscar" 
-               crear="vm.crearBuscar"
-               >
+        atras="vm.atrasBuscar" 
+        crear="vm.crearBuscar">
 </wl-buscar-doc>
