administracion, tipo entidad, estilos finalmente arreglados, sin dañar a los demas

--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -2,6 +2,7 @@
     <div class="box_left">
         <wl-lista-tipos-entidades seleccionar="vm.seleccionar"
                                   lista="vm.tiposEntidades"
+                                  objeto="vm.tipoEntidadSeleccionado"
                                   editando="vm.editando">
         </wl-lista-tipos-entidades>
     </div>
