--- a/WebLegemClient/src/common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.tmpl.html
@@ -20,7 +20,7 @@
                    id="rad_te_{{tipo.id}}" />
 
             <label class="styled" ng-class="vm.checkear(tipo)? 'animated': ''"
-                   ng-click="vm.seleccionar(tipo);vm.seleccionarObjeto(tipo)"
+                   ng-click="vm.seleccionar(tipo);"
                    ng-checked="vm.checkear(tipo)"
                    for="rad_te_{{tipo.id}}">
                 {{ tipo.nombre }}
