--- a/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
+++ b/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
@@ -1,13 +1,13 @@
 ﻿<div class="controles_box_right">
 
     <button class="btn_con_ico"
-            ng-show="vm.objetoSeleccionado && !vm.editando"
+            ng-show="vm.objetoSeleccionado && vm.objetoSeleccionado.id && !vm.editando"
             ng-click="vm.editar()">
         <span class="ico-pencil tamano_botones_1"></span>{{vm.language.strings.Editar}}
     </button>
 
     <button class="btn_con_ico"
-            ng-show="vm.objetoSeleccionado && (!vm.editando || !vm.creando)"
+            ng-show="vm.objetoSeleccionado && vm.objetoSeleccionado.id && (!vm.editando || !vm.creando)"
             ng-click="vm.eliminar()">
         <span class="ico-trash tamano_botones_1"></span>{{vm.language.strings.Eliminar}}
     </button>
