--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -2,7 +2,8 @@
     <div class="box_left">
         <wl-lista-entidades lista="vm.entidades"
                             objeto-seleccionado="vm.entidadSeleccionada"
-                            editando="vm.editando">
+                            editando="vm.editando"
+                            seleccionar="vm.seleccionar">
         </wl-lista-entidades>
     </div>
 
@@ -18,7 +19,7 @@
 
         <form name="vm.form_entidad">
 
-            <input class="a_input" class="a_input" ng-class="!vm.editando || !vm.entidadSeleccionada? 'disable': ''"
+            <input class="a_input" ng-class="!vm.editando || !vm.entidadSeleccionada? 'disable': ''"
                    id="nombre-entidad" type="text" required name="nombre"
                    placeholder="{{vm.language.strings.IngreseNombreEntidad}}" ng-model="vm.entidadSeleccionada.nombre" />
 
@@ -26,15 +27,12 @@
                 <div class="msj-error">{{vm.language.strings.CompleteCampo}}</div>
             </div>
 
-            <label class="texto_labels" for="tipo-entidad">{{vm.language.strings.TipoEntidad}}:</label>
+            <label class="texto_labels" for="tipo-entidad">{{vm.language.strings.TipoEntidad}}:</label>            
 
-            <div class="a_select" ng-show="!vm.editando" ng-class="!vm.editando ? 'disable' : ''">
-                <input type="text" ng-disabled="!vm.editando" name="tipo" required
-                       ng-model="vm.entidadSeleccionada.tipoEntidad.nombre" />
-            </div>
-
-            <div class="a_select" ng-show="vm.editando">
-                <select id=" tipoentidadselect" 
+            <div class="a_select"  ng-class="!vm.editando ? 'disable' : ''">
+                <select id="tipo" 
+                        name="tipo"
+                        ng-disabled="!vm.editando"
                         ng-options="tipoEntidad as tipoEntidad.nombre for tipoEntidad in vm.tiposEntidades"
                         ng-model="vm.entidadSeleccionada.tipoEntidad"></select>
             </div>
