--- a/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
+++ b/WebLegemClient/src/common/components/wlegem-admin-crud/wlegem-admin-crud.tmpl.html
@@ -17,4 +17,26 @@
             ng-click="vm.nuevo()">
         <span class="ico-plus tamano_botones_1"></span>{{vm.language.strings.Nuevo}}
     </button>
+
+    <!-- Modal confirmacion -->
+    <div class='a-modal' ng-if='vm.ban_confirmacion'>
+        <div class='a-modal-overlay' ng-click='vm.ban_confirmacion=false'></div><!--Simula la opacidad de fondo del dialogo-->
+        <div class='a-modal-dialog'>
+
+            <div class='a-modal-close verde'>
+                <div class="a-titulo-modal verde">Confirmación</div>
+                <button title="Cerrar dialogo" ng-click="vm.ban_confirmacion=false">
+                    <span class="ico-times"></span>
+                </button>
+            </div>
+
+            <div class='a-modal-contenido'>
+                <p>Esta seguro que desea eliminar "{{ vm.objetoSeleccionado.nombre }}"</p>
+                <button ng-click="vm.confirmarEliminacion()">Aceptar</button>
+                <button ng-click="vm.cancelarEliminacion()">Cancelar</button>
+            </div>
+
+        </div>
+    </div>
+
 </div>
