--- a/WebLegemClient/src/css/elementos/input_text.css
+++ b/WebLegemClient/src/css/elementos/input_text.css
@@ -108,7 +108,7 @@
 .input_text_btn.disable,    
 .input_text_ico.disable {
     pointer-events: none;
-    background:rgba(0,0,0,.08);
+    background:#ebebeb;
     color:#555;
 }
 
